{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 71,
  "lineage": "ca4794f1-8d55-f0ee-b68f-88126020724b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0849efe786caf37c7",
            "arn": "arn:aws:ec2:us-east-1:365803995554:elastic-ip/eipalloc-0849efe786caf37c7",
            "association_id": "eipassoc-0ca6408dbfea2010e",
            "domain": "vpc",
            "id": "eipalloc-0849efe786caf37c7",
            "instance": "i-0caa548e7436ce0ff",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09f20e37c4fe492f6",
            "private_dns": "ip-10-0-1-25.ec2.internal",
            "private_ip": "10.0.1.25",
            "public_dns": "ec2-13-216-126-57.compute-1.amazonaws.com",
            "public_ip": "13.216.126.57",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "coterie-eip",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "coterie-assessment"
            },
            "tags_all": {
              "Name": "coterie-eip",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "coterie-assessment"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040dc3b259ece28c6",
            "arn": "arn:aws:ec2:us-east-1:365803995554:instance/i-0caa548e7436ce0ff",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0caa548e7436ce0ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "r6i.xlarge",
            "ipv6_address_count": 0,
            "key_name": "coterie-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f20e37c4fe492f6",
            "private_dns": "ip-10-0-1-25.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.25",
            "public_dns": "ec2-13-216-126-57.compute-1.amazonaws.com",
            "public_ip": "13.216.126.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e351b3afc9125096",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085758d1d3cb58a1c",
            "tags": {
              "Name": "coterie-vm",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "coterie-assessment"
            },
            "tags_all": {
              "Name": "coterie-vm",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "coterie-assessment"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d32ebfb2bbc8b7ee"
            ]
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.vm",
            "aws_subnet.public",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365803995554:internet-gateway/igw-0f71128b027e67d2a",
            "id": "igw-0f71128b027e67d2a",
            "owner_id": "365803995554",
            "tags": {
              "Name": "coterie-igw",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "coterie-assessment"
            },
            "tags_all": {
              "Name": "coterie-igw",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "coterie-assessment"
            },
            "vpc_id": "vpc-097839bf3a30b14b8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365803995554:route-table/rtb-08cb754651249b50b",
            "id": "rtb-08cb754651249b50b",
            "owner_id": "365803995554",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f71128b027e67d2a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "coterie-public-rt",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "coterie-assessment"
            },
            "tags_all": {
              "Name": "coterie-public-rt",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "coterie-assessment"
            },
            "timeouts": null,
            "vpc_id": "vpc-097839bf3a30b14b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af7f617a7159ee45",
            "route_table_id": "rtb-08cb754651249b50b",
            "subnet_id": "subnet-085758d1d3cb58a1c"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365803995554:security-group/sg-0d32ebfb2bbc8b7ee",
            "description": "Allow SSH, HTTP/S, k3s API, Grafana, Prometheus, NodePort",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d32ebfb2bbc8b7ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NodePort",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "k3s API",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "coterie-vm-sg",
            "name_prefix": "",
            "owner_id": "365803995554",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "coterie-vm-sg",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "coterie-assessment"
            },
            "tags_all": {
              "Name": "coterie-vm-sg",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "coterie-assessment"
            },
            "timeouts": null,
            "vpc_id": "vpc-097839bf3a30b14b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365803995554:subnet/subnet-085758d1d3cb58a1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085758d1d3cb58a1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "365803995554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "coterie-public-subnet",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "coterie-assessment"
            },
            "tags_all": {
              "Name": "coterie-public-subnet",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "coterie-assessment"
            },
            "vpc_id": "vpc-097839bf3a30b14b8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365803995554:vpc/vpc-097839bf3a30b14b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be45831d28f5fd75",
            "default_route_table_id": "rtb-0a7852f8a9af4c99d",
            "default_security_group_id": "sg-09c424a9ee132f85c",
            "dhcp_options_id": "dopt-d9fcdaa3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-097839bf3a30b14b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a7852f8a9af4c99d",
            "owner_id": "365803995554",
            "tags": {
              "Name": "coterie-vpc",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "coterie-assessment"
            },
            "tags_all": {
              "Name": "coterie-vpc",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "coterie-assessment"
            }
          }
        }
      ]
    }
  ]
}